# LangCorrect

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.scratch/vicorrect/: PRD.md
.scratch/vicorrect/issues/: 01-correct-entered-text-offline.md  02-review-and-finalize-corrections.md  03-txt-file-workflow.md  04-docx-file-workflow.md  05-cancel-and-recover.md  06-runtime-and-model-settings.md  07-appearance-and-language.md  08-batch-correction.md  09-package-and-validate-windows-release.md
docs/: PRD.md
models/: README.md
scripts/: convert_to_onnx.py  download_model.py  manual_test_hf_model.py  quantize_model.py
src/: main.py
src/vicorrect/: __init__.py  diffing.py  logging_config.py  main.py  preprocessing.py  runtime.py  workflow.py
src/vicorrect/ui/: __init__.py  main_window.py
tests/: test_diffing.py  test_manual_test_script.py  test_preprocessing.py  test_runtime.py  test_workflow.py
